--- a/_includes/lockup.html
+++ b/_includes/lockup.html
@@ -85,4 +85,4 @@
   {% if link and link != '' %}
     </a>
   {% endif %}
-</div> <p class="annotation">lockup.html (but do not edit it) config for lockup is in _config.yml</p>
+</div> 
